<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/arf_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="p4.UI.AddMeetingActivity">

    <LinearLayout

        android:id="@+id/add_meeting_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    <!-- Subject -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subjectLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subject_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:hint="@string/subject"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:inputType="text"
            android:imeOptions="actionDone"
            app:errorEnabled="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Date and Hour -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/date_txt"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/date"
                    android:textSize="@dimen/title_size" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hours_txt"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/time"
                    android:textSize="@dimen/title_size" />

            </LinearLayout>
        </LinearLayout>

    <!-- Room -->

    <TextView
        android:id="@+id/nameRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/room"
        android:textSize="@dimen/title_size" />

    <Spinner
        android:id="@+id/room"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spinner_room_size"
        android:gravity="center"
        android:scrollbarSize="@dimen/spinner_room_size"
        android:textAlignment="center" />

    <!-- Mails -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/participant"
        android:textSize="@dimen/title_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:orientation="horizontal"
        android:weightSum="10">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/participantLyt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:clickable="true"
            android:focusable="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/participant_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email_participant"
                android:textColor="@color/colorPrimary"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:lines="20"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:textSize="@dimen/title_size"
                app:errorEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/add_mails_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="@color/white" />
    </LinearLayout>

        <!-- List of mails-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_list_mails"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recycler_view_mails"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_mail"
            />

        <!-- Final Button -->

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="#FFFF" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>